[package]
name = "hazy-ipa"
version = "0.0.0"
description = "Incremental program analysis"
homepage = "https://github.com/github/stack-graphs/tree/main/hazy-ipa"
repository = "https://github.com/github/stack-graphs/"
license = "MIT OR Apache-2.0"
authors = [
  "GitHub <opensource+stack-graphs@github.com>",
  "Douglas Creager <dcreager@dcreager.net>"
]
edition = "2018"

[features]
generate = ["dep:base16ct", "dep:sha2", "base16ct/alloc"]
zip = ["generate", "dep:zip"]

[dependencies]
base16ct = { version = "0.2", optional = true }
camino = { version = "1.1" }
sha2 = { version = "0.10", optional = true }
thiserror = { version = "1.0" }
zip = { version = "0.6", optional = true }

[dev-dependencies]
indoc = { version = "2.0" }
pretty_assertions = { version = "1.4" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
