[package]
name = "hazy-ipa"
version = "0.0.0"
description = "Incremental program analysis"
homepage = "https://github.com/github/stack-graphs/tree/main/hazy-ipa"
repository = "https://github.com/github/stack-graphs/"
license = "MIT OR Apache-2.0"
authors = [
  "GitHub <opensource+stack-graphs@github.com>",
  "Douglas Creager <dcreager@dcreager.net>"
]
edition = "2018"

[features]
generate = []
git = ["dep:git2"]
zip = ["generate", "dep:zip"]

[dependencies]
base16ct = { version = "0.2" }
camino = { version = "1.1" }
canonical_json = { version = "0.5" }
git2 = { version = "0.18", optional = true }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
sha2 = { version = "0.10" }
thiserror = { version = "1.0" }
zip = { version = "0.6", optional = true }

[dev-dependencies]
anyhow = { version = "1.0" }
indoc = { version = "2.0" }
memchr = { version = "2.7" }
pretty_assertions = { version = "1.4" }
tempfile = { version = "3.10" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
